[package]
name = "coercible_errors"
version = "0.1.4"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
description = "Zero-cost error handling for generic traits"
repository = "https://github.com/pchampin/coercible_errors"
documentation = "https://docs.rs/coercible_errors/"
keywords = ["error"]
categories = ["rust-patterns"]
license = "CECILL-C"
readme = "README.md"

edition = "2018"

[dependencies]
error-chain = { version = "0.12.0", optional = true }

[features]
default = ["error-chain", "example_generated"]
example_generated = []